# pip-rating

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  SECURITY.rst  _action.py  action.yml  authors.html  contributing.html  genindex.html  github_action.html  history.html  index.html  installation.html  modules.html  mypy.ini  objects.inv  overview.html  pip_rating.html  pip_rating.req_files.html  pip_rating.sources.html  py-modindex.html  pyproject.toml  readme.html  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini  troubleshooting.html  (+1 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-issue.yml  question.yml
.github/workflows/: docs.yml  pip-rating.yml  test.yml
_modules/: index.html
_modules/pip_rating/: dependencies.html  exceptions.html  management.html  packages.html  rating.html  req_files.html  results.html
_modules/pip_rating/req_files/: base.html  package_list.html  pipfile.html  pyproject.html  requirements.html  setupcfg.html  setuppy.html
_modules/pip_rating/sources/: audit.html  base.html  pypi.html  sourcecode_page.html  sourcerank.html
_sources/: github_action.rst.txt  installation.rst.txt  modules.rst.txt  pip_rating.req_files.rst.txt  pip_rating.sources.rst.txt  troubleshooting.rst.txt  usage.rst.txt
_static/: custom.css
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  overview.rst  pip_rating.rst  requirements_rating.req_files.rst  requirements_rating.rst  requirements_rating.sources.rst  troubleshooting.rst  usage.rst
pip_rating/: __init__.py  dependencies.py  exceptions.py  management.py  packages.py  rating.py  results.py  utils.py
pip_rating/req_files/: __init__.py  base.py  package_list.py  pipfile.py  pyproject.py  requirements.py  setupcfg.py  setuppy.py
pip_rating/sources/: audit.py  base.py  pypi.py  sourcecode_page.py  sourcerank.py
requirements_rating/: __init__.py  _compat.py  dependencies.py  exceptions.py  management.py  packages.py  rating.py  requirements.py  results.py  sourcerank.py
requirements_rating/req_files/: __init__.py  base.py  package_list.py  pipfile.py  pyproject.py  requirements.py  setupcfg.py  setuppy.py
requirements_rating/sources/: audit.py  base.py  pypi.py  sourcecode_page.py  sourcerank.py
requirements_score/: __init__.py  exceptions.py  management.py  packages.py  rating.py  requirements.py  sourcerank.py
requirements_score/tests/: __init__.py  test_requirements_score.py
scripts/: requirements-score
tests/: test_dependencies.py  test_exceptions.py  test_packages.py  test_rating.py  test_results.py  test_utils.py
tests/req_files/: test_base.py  test_init.py  test_package_list.py  test_pipfile.py  test_pyproject.py  test_requirements.py  test_setupcfg.py  test_setuppy.py
tests/sources/: test_audit.py  test_base.py  test_pypi.py  test_sourcecode_page.py  test_sourcerank.py
