[metadata]
name = requirements-score
version = attr: requirements_score.__version__
description = Check the health of your project's requirements and get a score for each dependency.
long-description = file: README.rst
keywords = requirements-score
author = Nekmo
author-email = contacto@nekmo.com
url = https://github.com/Nekmo/requirements-score/
download_url = https://github.com/Nekmo/requirements-score/archive/master.zip
license = MIT license
license-file = LICENSE
platform = any
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: POSIX :: BSD
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =    click>=6.0
[options.entry_points]
console_scripts =
    requirements_score = requirements_score.management:manage

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:requirements_score/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]
