[metadata]
name = requirements-rating
version = attr: requirements_rating.__version__
description = Check the health of your project's requirements and get a rating for each dependency.
long-description = file: README.rst
keywords = requirements-rating
author = Nekmo
author-email = contacto@nekmo.com
url = https://github.com/Nekmo/requirements-rating/
download_url = https://github.com/Nekmo/requirements-rating/archive/master.zip
license = MIT license
license-files =
    LICENSE
platform = any
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: POSIX :: BSD
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file:requirements.in
[options.entry_points]
console_scripts =
    requirements-rating = requirements_rating.management:manage

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:requirements_rating/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]
