[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[metadata]
name = pip-rating
version = attr: pip_rating.__version__
description = Check the health of your project's requirements and get a rating for each dependency.
long_description = file: README.rst
keywords = pip-rating
author = Nekmo
author_email = contacto@nekmo.com
url = https://github.com/Nekmo/pip-rating/
download_url = https://github.com/Nekmo/pip-rating/archive/master.zip
license = MIT license
license_files =
	LICENSE
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: SunOS/Solaris
	Operating System :: POSIX :: BSD
	License :: OSI Approved :: MIT License
	Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file:requirements.in

[options.entry_points]
console_scripts =
	pip-rating = pip_rating.management:manage

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion:file:pip_rating/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, F403, F401, E122
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9

[aliases]
